kubernetes/apps/headscale/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: headscale
    component: server
  name: headscale-external
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: wg
      port: 41641
      protocol: UDP
      targetPort: 41641
  selector:
    component: server
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: headscale
    component: server
  name: headscale
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: metrics
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    component: server
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: headscale
    component: ui
  name: headscale-admin
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    component: ui
  type: ClusterIP
